Frame editor bugfixes/polish: - Fix handling of curves with keys not covering the whole domain. - Fix zoom of single-value curves. - Taller editor. - Sparser ticks. - Reset view button.

--- a/StonehearthEditor/pages/styles/main.css
+++ b/StonehearthEditor/pages/styles/main.css
@@ -157,6 +157,19 @@ table {
     user-select: none;
 }
 
+.curve-table td {
+   text-align: left;
+}
+
+.curve-table input {
+   width: 100px;
+}
+
+.curve-table button {
+   width: 100px;
+   float: right;
+}
+
 .curve-input {
     width: 75px;
     text-align: center;
